Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21201

The scroll is not working correctly when selecting cells using vertical header from down to up in QTableWidget

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0
    • 4.7.3, 4.8.7, 5.3.2
    • Widgets: Itemviews
    • None
    • f9408317e70bc2e635a2f9baeff35d1c06227734 020664da2db7086b81864a7f9658cf783b2ec83b

    Description

      Attached is an application that can be used to reproduce this bug.

      Steps to reproduce:
      1. scroll to the bottom of the table
      2. select the bottommost vertical header and start selecting the cells from down to up

      The expected result would be, that all the cells in the table are selected. The actual outcome is that the table is not scrolled to the top and not all cells are selected.
      The scrolling works if one starts the selection from the bottommost cell next to the vertical header.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            smd Jan Arve
            qtcomsupport Qt Support
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes